--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ h1#open-glossary {
     top: 1px;
     color: white;
     margin-right: 213px;
+    margin-left: 15px;
 }
 
 span.twname {
@@ -210,7 +211,7 @@ footer .footer-license img {
     opacity: 0.9;
     margin: 0;
     border: 0;
-    margin-bottom: -4px;
+    margin-bottom: -6px;
 }
 
 footer div.container {
@@ -219,4 +220,37 @@ footer div.container {
 
 footer .footer-license {
     margin-left: 4px;
+}
+
+/* Aside search box */
+
+input#search {
+    border-bottom: none;
+}
+
+.row {
+    -webkit-transition: all ease-in 0.2s;
+    -moz-transition: all ease-in 0.2s;
+    -webkit-transition: all ease-in 0.2s;
+    -o-transition: all ease-in 0.2s;
+    -ms-transition: all ease-in 0.2s;         
+    transition: all ease-in 0.2s;
+}
+
+.search-hidden {
+  display: none !important;
+}
+
+p#intro-guide {
+    font-size: 1.2rem;
+    padding: 1.2rem 10%;
+}
+
+span#social-links {
+    display: block; text-align: center; margin-top: 14px; margin-right: auto;
+    margin-left: auto;
+    padding-top: 6px; 
+    padding-bottom: 6px; 
+    border-radius: 9px;
+    font-size: smaller; font-style: italic; background: white; width: 54%;
 }
