--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2150,6 +2150,22 @@ ul.staggered-list li {
   Media Query Classes
 **********************/
 @media only screen and (max-width : 600px) {
+
+.nav-stuck #social-nav li a {
+  min-width: 100%;
+  padding: 0 8px;
+}
+
+.nav-stuck #social-nav {
+  margin-right: 78px;
+}
+
+.nav-stuck h1#open-glossary {
+  font-size: 20px !important;
+  max-width: 250px;
+  margin-top: 27px !important;
+}
+
 h1#open-glossary {
   position: absolute;
   top: 27px;
@@ -2167,6 +2183,27 @@ nav {
     display: none !important; } }
 
 @media only screen and (max-width : 992px) {
+
+.nav-stuck #social-nav li img {
+  height: 60px;
+  padding-top: 21px;
+}
+
+.nav-stuck h1#open-glossary {
+  font-size: 20px !important;
+  max-width: 250px;
+  margin-top: 27px !important;
+}
+
+h1#open-glossary {
+  position: absolute;
+  top: 27px;
+  font-size: 2rem;
+  color: white;
+  max-width: 200px;
+  margin-left: 50px;
+}
+
   dl, #resource-list p, #declarations-list p {
     padding-right: 45px;
   }
@@ -5315,7 +5352,9 @@ nav {
     color: #fff; }
   nav .nav-wrapper {
     position: relative;
-    height: 100%; }
+    height: 100%; 
+    margin-right: 0px;
+}
     nav .nav-wrapper i {
       display: block;
       font-size: 2rem; }
@@ -5346,13 +5385,13 @@ nav {
       -o-transform: translateX(-50%);
       transform: translateX(-50%); }
     @media only screen and (max-width : 992px) {
-      nav .brand-logo {
-        left: 50%;
+    nav .brand-logo {
+/*        left: 50%;
         -webkit-transform: translateX(-50%);
         -moz-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
         -o-transform: translateX(-50%);
-        transform: translateX(-50%); } }
+        transform: translateX(-50%); */ } }
     nav .brand-logo.right {
       right: 0.5rem;
       padding: 0; }
